artifacthub/library/general/httpsonly/1.0.2/samples/ingress-https-only-tls-optional/example_allowed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo-allowed-tls-optional
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: example-host.example.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx
              port:
                number: 80
